update docker compose, swagger and handler ne
